fix height on mobile for game screen

--- a/src/styles/Home.module.css
+++ b/src/styles/Home.module.css
@@ -66,7 +66,6 @@
   .main {
     flex-direction: column;
     padding: 48px 8px;
-    min-height: auto;
   }
 
   .column {
